# opengl_glut

./: .gitignore  CMakeLists.txt
src/: config.h  main.cpp  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.txt  vertex.txt
